--- a/style.css
+++ b/style.css
@@ -209,3 +209,29 @@ h1{
       border-radius: 4px;
       box-sizing: border-box;
     }
+    .Mes{
+      margin-left: 5px;
+    }
+
+    .grid-container {
+      display: grid;
+      margin-left: 8px;
+      grid-template-columns: 50px 50px 50px 50px 50px 50px;
+      background-color: #042743;
+      row-gap: 8px;
+    }
+    .grid-item {
+      background-color: #042743;
+      color: #ffffff;
+      border: 1px solid #ffffff;
+      padding-left: 5px;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      margin-right: 10px;
+      font-size: 18px;
+     
+    }
+    .grid-item:hover{
+      background-color: rgba(251, 252, 253, 0.836);
+      color:#042743;
+    }
