--- a/style.css
+++ b/style.css
@@ -87,8 +87,6 @@ h1{
         box-sizing: border-box;
       }
       .grid-container {
-        display: grid;
-        background-color: #2196F3;
         padding: 10px;
         
       }
@@ -192,6 +190,9 @@ h1{
     .dejarDeColgar{
       margin: 20px;
     }
+    .paraMetrica{
+      margin: 20px;
+    }
     .firma{
       display: flex;
       align-items: center;
@@ -216,14 +217,14 @@ h1{
     .grid-container {
       display: grid;
       margin-left: 8px;
-      grid-template-columns: 50px 50px 50px 50px 50px 50px;
-      background-color: #042743;
-      row-gap: 8px;
+      grid-template-columns: 46px 46px 46px 46px 46px 46px;
+      background-color: #04274300;
+      row-gap: 4px;
     }
     .grid-item {
       background-color: #042743;
       color: #ffffff;
-      border: 1px solid #ffffff;
+      border: 2px solid #000000;
       padding-left: 5px;
       padding-bottom: 5px;
       padding-top: 5px;
@@ -232,6 +233,7 @@ h1{
      
     }
     .grid-item:hover{
-      background-color: rgba(251, 252, 253, 0.836);
-      color:#042743;
+      background-color: #177ddb;
+      cursor:pointer;
     }
+  
