--- a/style.css
+++ b/style.css
@@ -167,13 +167,87 @@ h1{
       border-radius: 4px;
       box-sizing: border-box;
     }
+    .botonSwitch{
+      margin-left: 240px;
+      position: absolute;
+    }
+    .lbl-switch{
+      display: inline-block;
+      position: relative;
+      width: 55px;
+      height: 30px;
+      background: #61A0FF;
+      border-radius: 100px;
+      top: 16px;
+      left: 28px;
+      cursor: pointer;
+    }
+    #btn-switch:checked~ .lbl-switch{
+      background: #aaa;
+    }
+    .lbl-switch:after{
+      position: absolute;
+      content: '';
+      width: 22px;
+      height: 22px;
+      top: 4px;
+      left: 4px;
+      background: #FFF;
+      border-radius: 100px;
+      transition: 0.3s;
+    }
+    #btn-switch:checked~ .lbl-switch:after{
+      left: 28px;
+    }
+    #btn-switch{
+      display: none;
+    }
     .res{
       margin-left: 5px;
     }
-    .resumen.res{
-      background-color: red;
-      
+
+    @keyframes MenuActivado{
+
+      0%{
+        border: 2px solid #FFFFFF;
+        color: #FFFFFF;
+      }
+      100%{
+        border: 2px solid #004033;
+        color: #004033;
+      }
     }
+    @keyframes MenuDesActivado{
+     
+      0%{
+        border: 2px solid #004033;
+        color: #004033;
+      }
+      100%{
+        border: 2px solid #FFFFFF;
+        color: #FFFFFF;
+      }
+    }
+    @keyframes CuadroNormal{
+
+      0%{
+        height: 20%;
+      }
+      100%{
+        height: 110%;
+        
+      }
+    }
+    @keyframes CuadroCorto{
+     
+      0%{
+        height: 110%;
+      }
+      100%{
+        height: 20%;
+      }
+    }
+  
     .espacio{
       display: inline-block;
       height: 10px;
@@ -216,7 +290,7 @@ h1{
 
     .grid-container {
       display: grid;
-      margin-left: 8px;
+      margin-left: 10px;
       grid-template-columns: 46px 46px 46px 46px 46px 46px;
       background-color: #04274300;
       row-gap: 4px;
