--- a/style.css
+++ b/style.css
@@ -311,3 +311,48 @@ h1{
       cursor:pointer;
     }
   
+    @keyframes MenuActivated{
+
+      0%{
+        background-color: #04274300;
+        color: #ffffff00;
+        border: 2px solid #00000000;
+      }
+      100%{
+        background-color: #042743;
+        color: #ffffff;
+        border: 2px solid #000000;
+      }
+    }
+    @keyframes MenuDeActivated{
+     
+      0%{
+        background-color: #042743;
+        color: #ffffff;
+        border: 2px solid #000000;
+      }
+      100%{
+        background-color: #04274300;
+        color: #ffffff00;
+        border: 2px solid #00000000;
+      }
+    }
+    @keyframes FrameSizeNormal{
+
+      0%{
+        height: 20%;
+      }
+      100%{
+        height: 100%;
+        
+      }
+    }
+    @keyframes FrameSizeShort{
+     
+      0%{
+        height: 100%;
+      }
+      100%{
+        height: 20%;
+      }
+    }
