--- a/style.css
+++ b/style.css
@@ -206,6 +206,16 @@ h1{
     margin-left: 5px;
   }
 
+  .flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+  #main-container div{
+    width: 500px;
+    height: 50px;
+  }
+
   @keyframes MenuActivado{
 
     0%{
