--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
-h1{
+  h1{
     margin-left: 62px;
     font-family: "Roboto", sans-serif;
     font-size: 24px;
     color: #004033;
     }
   body{
-  
     width: 360px;
     height: 300px;
   }
   label{
-    margin-left: -10px;
+    
     font-family: "Roboto", sans-serif;
     font-size: 18px;
     color: #004033;
@@ -100,7 +99,7 @@ h1{
     }
   
     input[type=number], select{
-      width: 30%;
+      width: 50%;
       margin: auto;
       text-align: center;
       display: inline-block;
@@ -114,10 +113,16 @@ h1{
       box-sizing: border-box;
     }
   
-    .etiquetas{
-      margin-left: 18%;
-  
+    .grid-container3{
+      display: grid;
+      grid-template-columns: auto auto;
     }
+    .TagIngresoDatos > label{
+      display: grid;
+      
+    }
+  
+   
     #submit{
       margin-left: 25%;
       font-family: "Roboto", sans-serif;
@@ -125,18 +130,38 @@ h1{
       color: #004033;
       z-index: 30 !important;
     }
-  
+    .TagIngresoDatos{
+      font-family: "Roboto", sans-serif;
+      font-size: 18px;
+      color: #004033;
+    }
+    #WDtag{
+      margin-left: 48px;
+    }
+    #BDtag{
+      margin-left: 48px;
+      margin-top: 35px; 
+       
+    }
+    #RCtag{
+      margin-left: 48px;
+      margin-top: 40px;
+    }
+    #TCtag{
+      margin-left: 48px;
+      margin-top: 40px;
+    }
     #WD{
-      margin-left: 30px;
+      margin-left: 24px;
     }
     #BD{
-      margin-left: 17px;
+      margin-left: 24px;
     }
     #RC{
-      margin-left: 2px;
+      margin-left: 24px;
     }
     #TC{
-      margin-left: 22px;
+      margin-left: 24px;
     }
   
   /*.cover{
@@ -209,7 +234,7 @@ h1{
   .grid-container2{
     display: grid;
     grid-template-columns: auto auto;
-    gap: 10px;
+    gap: 2px;
     
   }
   .grid-container2 > div {
@@ -219,7 +244,7 @@ h1{
   }
   .grid-container2 > div > p{
     text-align: center;
-    padding: 4px 0px;
+    padding: 2px 0px;
     font-size: 20px;
   }
 
@@ -255,14 +280,14 @@ h1{
       height: 20%;
     }
     100%{
-      height: 145%;
+      height: 140%;
       
     }
   }
   @keyframes CuadroCorto{
     
     0%{
-      height: 145%;
+      height: 130%;
     }
     100%{
       height: 20%;
