--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   body{
     width: 360px;
     height: 300px;
+    
   }
   label{
     
@@ -85,6 +86,42 @@
       padding-bottom: 25%;
       box-sizing: border-box;
     }
+
+    .triangulo{
+      position: absolute;
+      width: 0;
+      height: 0;
+      cursor: grab;
+      margin-top: 3px;
+      margin-left: -7px;
+      border-top: 9px solid transparent;
+      border-left: 18px solid #61A0FF;
+      border-bottom: 9px solid transparent;
+      z-index: 3;
+      
+    }
+    .triangulo > input{
+      position:absolute;
+      width: 18px;
+      font-family: "Roboto", sans-serif;
+      font-size: 15px;
+      margin-left:-48px;
+      margin-top: -12px;
+      color: #11366e;
+      rotate: 0deg;
+    }
+
+    #circulo{
+      width: 247px;
+      height: 238px;
+      background-color: transparent;
+      border: 2px solid transparent;
+      border-radius: 50%;
+      position: absolute;
+      left: 64px;
+      top: 86px;
+    }
+
     .grid-container {
       padding: 10px;
       
@@ -152,16 +189,16 @@
       margin-top: 40px;
     }
     #WD{
-      margin-left: 24px;
+      margin-left: 40px;
     }
     #BD{
-      margin-left: 24px;
+      margin-left: 40px;
     }
     #RC{
-      margin-left: 24px;
+      margin-left: 40px;
     }
     #TC{
-      margin-left: 24px;
+      margin-left: 40px;
     }
   
   /*.cover{
